Fix hero spacing

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ header {
 
 .img-holder {
     height: 0;
-    padding-bottom: 68%;
+    padding-bottom: 50%;
     overflow: hidden;
     margin-top: -7rem!important;
 }
